# Smart-Vending-Machine

./: .gitignore  CLAUDE.md  README.md  git使用说明.md
P4HarfWare/platform1/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
P4HarfWare/platform1/main/: CMakeLists.txt  config.h  idf_component.yml  main.cpp
P4HarfWare/platform1/main/bus/: app_events.h  state_machine.cpp  state_machine.h
P4HarfWare/platform1/main/camera/: camera_pipeline.cpp  camera_pipeline.h  ppa_rotate.cpp  ppa_rotate.h
P4HarfWare/platform1/main/door/: door_sensor.cpp  door_sensor.h
P4HarfWare/platform1/main/indicators/: rgb_led.cpp  rgb_led.h  servo.cpp  servo.h
P4HarfWare/platform1/main/network/: generate_cert.sh  upload_snapshot.cpp  upload_snapshot.h  wifi_mqtt.cpp  wifi_mqtt.h
P4HarfWare/platform1/main/repl/: console.cpp  console.h
P4HarfWare/platform1/main/yolo/: yolo_detect.cpp  yolo_detect.cpp.patch  yolo_detect.h
P4Yolo/model3kind/: data.yaml  train.py
P4Yolo/model3kind/model3kind_yolo11n/: args.yaml  results.csv
SVM-Server/retail-cloud-staging/: .env.example  README.md  docker-compose.yml  使用手册.md  硬件设备接入参考.md
SVM-Server/retail-cloud-staging/backend/: Dockerfile  pom.xml
SVM-Server/retail-cloud-staging/docs/对接文档/: 手机用户端API文档.md  设备通信接口表.md  零售柜App技术对接文档.md  零售柜手机应用开发计划书.md
SVM-Server/retail-cloud-staging/emqx/: init-users.sh
SVM-Server/retail-cloud-staging/frontend/: api.js  app.js  index.html  render-alerts.js  render-dashboard.js  render-device-ctrl.js  render-firmware.js  render-stock.js  style.css
SVM-Server/retail-cloud-staging/inference/: Dockerfile  config.py  requirements.txt  server_onnx.py
SVM-Server/retail-cloud-staging/nginx/: default.conf  default.conf.bak
app/sx/: api_test.js  app.js  app.json  app.wxss  cert_request.js  check_cert.sh  console_test.js  https_server.js  import_cert.sh  project.config.json  project.private.config.json  test_api.sh  test_server.sh  test_server_api.py
app/sx/images/: README.md  assets-guide.md
app/sx/utils/: api.js  cert.js  util.js
doc/: p4硬件平台.md  小程序用户端.md  服务器端.md  部署配置清单.md
(+98 files in other folders)
